syntax = "proto3";
package todo;

option go_package = "github.com/fuzail/todosvc/proto;pb";

import "google/protobuf/timestamp.proto";

message Task {
  string id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
}

message CreateTaskResponse {
  Task task = 1;
}

message GetTaskRequest {
  string id = 1;
}

message GetTaskResponse {
  Task task = 1;
}

message ListTasksRequest {
  int32 page = 1; // 1-based
  int32 page_size = 2;
}

message ListTasksResponse {
  repeated Task tasks = 1;
  int32 page = 2;
  int32 page_size = 3;
  int64 total = 4;
}

message UpdateTaskRequest {
  string id = 1;
  string title = 2;
  string description = 3;
}

message UpdateTaskResponse {
  Task task = 1;
}

message MarkCompleteRequest {
  string id = 1;
  bool completed = 2;
}

message MarkCompleteResponse {
  Task task = 1;
}

message DeleteTaskRequest {
  string id = 1;
}

message DeleteTaskResponse {
  bool success = 1;
}

service TodoService {
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse);
  rpc ListTasks(ListTasksRequest) returns (ListTasksResponse);
  rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse);
  rpc MarkComplete(MarkCompleteRequest) returns (MarkCompleteResponse);
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse);
}
